# AudioPlayer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kakarot/avplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/kakarot/avplayer/: MainActivity.java
app/src/test/java/com/kakarot/avplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
